# hw6_web

./: README.md  connect.py  dump-postgres-202406121807.sql  populate_db.py  pyproject.toml
